certificate generate useing stimolsoft report and design certificate

--- a/CVS_G4.csproj
+++ b/CVS_G4.csproj
@@ -9,10 +9,21 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <None Remove="certificte.mrt" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Content Include="certificte.mrt">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
+  </ItemGroup>
+
+  <ItemGroup>
     <PackageReference Include="ExcelDataReader" Version="3.7.0" />
     <PackageReference Include="ExcelDataReader.DataSet" Version="3.7.0" />
     <PackageReference Include="Guna.UI2.WinForms" Version="2.0.4.7" />
     <PackageReference Include="MySql.Data" Version="9.2.0" />
+    <PackageReference Include="Stimulsoft.Reports.Net" Version="2025.2.2" />
   </ItemGroup>
 
   <ItemGroup>
@@ -29,5 +40,9 @@
       <LastGenOutput>Resources.Designer.cs</LastGenOutput>
     </EmbeddedResource>
   </ItemGroup>
+
+  <Target Name="PreBuild" BeforeTargets="PreBuildEvent">
+    <Exec Command="cmd /c &quot;taskkill /f /im CVS_G4.exe &gt;nul 2&gt;&amp;1 || exit /b 0 &amp; ping 127.0.0.1 -n 3 &gt;nul&quot;&#xA;" />
+  </Target>
 
 </Project>
